- Hedge Witch/Wizard drain modifiers now work properly. Fixes #4957.
- Uneducated now properly disables defaulting on Professional, Academic, and Technical Active skills. Existing characters with this quality will need to re-add the quality or reapply improvements to see this effect.

Changed/New Strings:
- LimitCondition_SoldierParagon
- Label_Options_EssenceModifierPostExpression
- Message_ConfirmReapplySpecificImprovements
- MessageTitle_ConfirmReapplySpecificImprovements
- String_SelectedItem
- Label_SelectAdvancedLifestyle_UnusedLP
- MessageTitle_SelectAdvancedLifestyle_OverLPLimit
- Label_SelectAdvancedLifestyle_LPContribution
- Label_QualityCost
- Label_LP
- Label_BonusLP
- Label_QualityLP
- Tip_SpellsSelectedSpells
- String_MasteryPointsAcronym
- String_Lifestyle

Build 224
Application Changes:
- Added support for opening and saving characters in the form of compressed saves (chum5lz) instead of uncompressed (chum5). The program has three different options for the compression level of saved chum5lz files, and at the most thorough levels, savefile sizes can be decreased by up to around 90%.
- Fixed certain texts in Dark Mode not properly switching to a white color.
- The checkboxes for the list to set what cyberware and bioware grades are allowed at character creation no longer appears weird in dark mode on machines running Windows 10 or earlier.
- Fixed various display issues with custom rating names for vehicle mods.
- Karma cost modifiers that only apply in character creation mode no longer cause characters to be created with less/negative karma, and karma cost modifiers that only apply after character creation no longer cause characters to be created with extra karma. Fixes #4926 and fixes #4918.